--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -35,7 +35,7 @@ body {
 h1,h2,h3,h4,h5,h6 {
 		color: #fafbfc;
 		}
-a,a:visited {color:#7EABB6;}
+a {color:#7EABB6;}
 a:hover,a:active {color:#b1e5f2;}
 
 .label {
@@ -56,6 +56,7 @@ a:hover,a:active {color:#b1e5f2;}
 @import "console/help";
 @import "console/breadcrumbs";
 @import "console/ribbon";
+@import "console/buttons";
 
 
 
