--- a/site/app/stylesheets/console/_buttons.scss
+++ b/site/app/stylesheets/console/_buttons.scss
@@ -1,70 +1,181 @@
-// CONSOLE BUTTON STYLES
-// -------------
-/*
-.btn, 
-a.btn {
-	color: #ccc;
-  line-height: 17px;
-	text-shadow: 0 -1px 1px #000000;
-	border-color: #010101;//rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.25) rgba(255, 255, 255, 0.25);
-	@include gradient-vertical-three-colors($startColor: #505050, $midColor: #333, $colorStop: 5%, $endColor: #1f1f1f);
+// Console specific button styling
+// --------------------------------
+
+// Core
+.btn {
+  display: inline-block;
+  padding: 5px 18px;
+  margin-bottom: 0; // For input.btn
+  font-size: $baseFontSize;
+  line-height: $baseLineHeight;
+  color: #f0f0f0;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 0 1px 0 #000;
+  vertical-align: middle;
+  @include border-radius(0); 
+  // @include gradient-vertical($startColor: #505050, $endColor: #1f1f1f);
+  @include buttonBackgroundConsole(#505050, #1f1f1f);
+  border-color: #010101;
+  cursor: pointer;
+  border-style: solid;
+  border-width: 1px;
+
+  // Give IE7 some love
+  @include reset-filter();
+  @include ie7-restore-left-whitespace();
+
+  *margin-left: .3em; //?
 }
 
-.btn:hover, 
-a.btn:hover {
-	color: #fff;
-	background-color: #4c4c4c;
-	@include gradient-vertical-three-colors($startColor: #4c4c4c, $midColor: #333, $colorStop: 95%, $endColor: #252525);
+.btn:first-child {
+  *margin-left: 0;
 }
 
-.btn:active,
-a.btn:active {
-  color: $activeButtonLightColor;
+// Focus state for keyboard and accessibility
+.btn:focus {
+  @include tab-focus();
+}
+
+// Active state
+.btn:active {
+  background-image: none;
+  outline: 0;
   border-color: rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.1) rgba(255, 255, 255, 0.1);
 }
-*/
 
-.btn-primary, a.btn-primary {
-	//@include buttonBackground(#94dbed, #569daf);
-	@include buttonBackground(#B1E5F2, #8bb4be);
+// Disabled state
+.btn.disabled,
+.btn[disabled] {
+  cursor: default;
+  background-image: none;
+  background-color: darken($white, 10%);
+  @include opacity(65);
+  @include box-shadow(none);
+}
+
+
+// Button Sizes
+// --------------------------------------------------
+
+// Large
+.btn-large {
+  padding: 9px 14px;
+  font-size: $baseFontSize + 2px;
+  line-height: normal;
+}
+.btn-large [class^="icon-"] {
+  margin-top: 1px;
+}
+
+// Small
+.btn-small {
+  padding: 5px 9px;
+  font-size: $baseFontSize - 2px;
+  line-height: $baseLineHeight - 2px;
+}
+.btn-small [class^="icon-"] {
+  margin-top: -1px;
+}
+
+// Mini
+.btn-mini {
+  padding: 2px 6px;
+  font-size: $baseFontSize - 2px;
+  line-height: $baseLineHeight - 4px;
+}
+
+
+// Alternate buttons
+// --------------------------------------------------
+
+// Set text color
+// -------------------------
+.btn-primary,
+.btn-primary:hover,
+.btn-warning,
+.btn-warning:hover,
+.btn-danger,
+.btn-danger:hover,
+.btn-success,
+.btn-success:hover,
+.btn-info,
+.btn-info:hover,
+.btn-inverse,
+.btn-inverse:hover {
+  text-shadow: -1px 0px 1px rgba(0, 0, 0, 0.5); //tweaked
+  color: $white;
+}
+.btn-primary,
+.btn-primary:hover {
 	color: $grayDark;
-	border-color: transparent;
-	text-shadow: 0 1px 0 #DFDFDF;
+	text-shadow: 0 1px 0 rgba(255,255,255,.7);
 }
-.btn-primary:hover, a.btn-primary:hover {
-	background-color: #85d6eb;
-	background-image: none;
-	border-color: transparent;
-	color: $grayDark;
-	text-shadow: 0 1px 0 #DFDFDF;
-}
-.btn-primary:active, a.btn-primary:active {
-	background-color: #b1e5f2;
-	border-color: rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.35) rgba(5, 5, 5, 0.2) rgba(5, 5, 5, 0.15);
-	color: $activeButtonDarkColor;
-	@include box-shadow(none);
+// Provide *some* extra contrast for those who can get it
+.btn-primary.active,
+.btn-warning.active,
+.btn-danger.active,
+.btn-success.active,
+.btn-info.active,
+.btn-dark.active {
+  color: rgba(255,255,255,.75);
 }
 
-.btn-primary.btn-large {
-  text-transform: uppercase;
+// Set the backgrounds and changes from default
+// -------------------------
+.btn-primary {
+  @include buttonBackground($primaryButtonBackground, darken( $primaryButtonBackground, 15% ));
+}
+// Warning appears are orange
+.btn-warning {
+  @include buttonBackground(#FFB02E, darken(#FFB02E, 15%));
+}
+// Danger and error appear as red
+.btn-danger {
+  @include buttonBackground(#c00, darken(#c00, 15%));
+}
+// Success appears as green
+.btn-success {
+  @include buttonBackground(#ABB64C, darken(#ABB64C, 15%));
+}
+// Info appears as a neutral blue
+.btn-info {
+  @include buttonBackground(#0167d9, darken(#0167d9, 15%));
+  color: #edf5fd;
+}
+// Inverse appears as dark gray
+.btn-inverse {
+  @include buttonBackground(#505050, #1f1f1f);
+  border-color: #010101;
 }
 
 
-.btn-danger, a.btn-danger {
-	@include buttonBackground(#c00, #a00);
-	color: #fff;
-	border-color: transparent;
-	text-shadow: 0 0 1px black;
-}
-.btn-danger:hover, a.btn-danger:hover {
-	color: #fff;
-	background-image:none;
-	border-color: transparent;
-}
-.btn-danger:active, a.btn-danger:active {
-	border-color: rgba(5, 5, 5, 0.3) rgba(5, 5, 5, 0.35) rgba(5, 5, 5, 0.2) rgba(5, 5, 5, 0.15);
-	background-image:none;
-	color: $activeButtonLightColor;
-	@include box-shadow(none);
+// Cross-browser Jank
+// --------------------------------------------------
+
+button.btn,
+input[type="submit"].btn {
+
+  // Firefox 3.6 only I believe
+  &::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+  }
+
+  // IE7 has some default padding on button controls
+  *padding-top: 2px;
+  *padding-bottom: 2px;
+  &.large {
+    *padding-top: 7px;
+    *padding-bottom: 7px;
+  }
+  &.small {
+    *padding-top: 3px;
+    *padding-bottom: 3px;
+  }
 }
 
+.form-actions > img,
+.btn-toolbar > img {
+  vertical-align: middle;
+  }
