Change from 'red hat network' to 'red hat' terminology.

--- a/site/app/views/user/show.html.haml
+++ b/site/app/views/user/show.html.haml
@@ -10,7 +10,7 @@
         %h2 Personal Information
 
         %p
-          OpenShift currently allows access via the Red Hat Network (RHN) or through an account created with your e-mail and a password.
+          OpenShift currently allows access via an existing Red Hat account or through an account created with your e-mail and password.
 
         %table.table
           %thead
