Add an informational page on logout that informs the user that they have been logged out and why.  Currently just takes the user back to the account page.

--- a/site/app/views/user/no_info.html.haml
+++ b/site/app/views/user/no_info.html.haml
@@ -4,5 +4,5 @@
 %p
   Most of the time, refreshing the page will fix it.
 = link_to 'Refresh the page', control_panel_path
-%p
-  If that doesn't work, please <a href="mailto:openshift@redhat.com">contact us</a> and let us know.
+%p 
+  If refreshing does not work, please contact us at #{link_to_account_mailto} or on #{link_to_irc}.
