--- a/site/app/views/cartridge_types/show.html.haml
+++ b/site/app/views/cartridge_types/show.html.haml
@@ -9,7 +9,7 @@
 = semantic_form_for @cartridge, :url => application_cartridges_path(@application), :html => {:class => 'form'} do |f|
   = f.hidden_field :type, :value => @cartridge_type.type
   = f.hidden_field :name, :value => @cartridge_type.name
-  = f.semantic_errors :name
+  = f.semantic_errors :name, :cartridge
   %div
     Do you want to add the
     %strong
