--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -85,6 +85,7 @@
 
   .submitted {
     font-style: italic;
+    color: #999999;
   }
 }
 .comment > table td { vertical-align: top; }
@@ -115,13 +116,46 @@
 .community .column-content {
 	min-height: 712px;
 	}
-.community .column-content .views-field-name,
-.community .column-content .views-field-phpcode,
-.community .column-content .views-field-value,
-.community .column-content .views-field-phpcode-1 {
+.community #comments .views-field-name,
+.community #comments .views-field-phpcode,
+.community #comments .views-field-value,
+.community #comments .views-field-phpcode-1 {
 	margin-left: 60px;
 }
-.views-field-name {
+.forum-list-main {
+	
+	.views-field-title {
+		font-size:14px;
+	}
+	
+	.views-field-last-comment_timestamp, 
+	.views-field-comment-count {
+		font-size:11px;
+	}
+	
+	.picture-right {
+		line-height: 15px;
+	}
+}
+#forum-header {
+	position:relative;
+	
+	.new-post-button {
+		position:absolute;
+		right: 0;
+  	top: 23px;
+	}
+}
+.view-header {
+	margin-bottom: 10px;
+}
+
+@media (max-width:767px) {
+	.forum-list-main .picture-right {
+    clear: left;
+  }
+}
+.community #comments .views-field-name {
 	font-size: 16px;
 	font-weight: bold;
 }
@@ -133,7 +167,9 @@
 .community .field_author_image_fid {
   border: 4px solid #000;
 }
-
+.new-post-button {
+	text-align:right;
+}
 .view-user-profile-box {
   .picture img {
     max-width: 40px;
@@ -275,10 +311,6 @@ html.js fieldset.collapsible .fieldset-wrapper {
 		padding-right: 13px;
 		}
 }
-.submitted {
-	font-style: italic;
-	color: #b0b0b0;
-}
 .comment-text {
 	border: 1px solid #ddd;
 	border-top: 5px solid #ddd;
@@ -377,6 +409,26 @@ html.js fieldset.collapsible .fieldset-wrapper {
 	padding: 20px 25px;
 	margin: 5px 0 0 0;
 	overflow: hidden;
+	
+	.links {
+		position: relative;
+		
+		a {
+			margin-right: 15px;
+			text-transform: capitalize;
+		}
+		
+		.flag-wrapper {
+    	position: absolute;
+    	right: -30px;
+    	font-size: 11px;
+    	margin:0;
+    	
+    	.flag-action {
+    		color:#999999;
+    	}
+		}
+	}
 }
 .b-edge {
   border-color: #DFDFDF transparent;
@@ -426,15 +478,28 @@ html.js fieldset.collapsible .fieldset-wrapper {
 .community .node-blog > h2+p {
 	margin: 0;
 	}
-.community .blog-metadata {
+.community .blog-post .blog-metadata {
   margin-bottom: 15px;
   color: #999;
+	border-bottom: 1px solid #CCCCCC;
+	padding-bottom: 20px;
   div {
     display: inline;
   }
   .author-bio-box  {
     .author-bio { display: none; }
   }
+}
+.community .blog-post {
+	h1 {
+		font-size: 22px;
+    line-height: 36px;
+    margin-bottom: 8px;
+	}
+	> h1.blog-title {
+		font-size: 32px;
+		font-weight:bold;
+	}
 }
 	
 
@@ -473,24 +538,7 @@ html.js fieldset.collapsible .fieldset-wrapper {
 #toc td ul { list-style: none; margin: 0 0 0 9px; }
 
 /* Events */
-ul.forum-navigation-links {
-     list-style: none outside none;
-     margin: 0 0 20px 0;
-}
-
-ul.forum-navigation-links li {
-     display: inline;
-     font-weight: bold;
-     padding: 0 20px 0 0;
-}
-
-ul.forum-navigation-links li:first-child:after {
-     border-right: 1px solid #666;
-     content: "";
-     padding-right: 20px;
-}
-
-.view-event-view .views-row-first {
+.event-listings .view-event-view .views-row-first {
 	border-top: 5px solid #aaa;
 }
 .view-event-view .views-row {
