Bug 820151 - Show the account information for jenkins on app creation, refactor message passing on cart creation, remove layout/_flashes and replace with simpler helper, ensure pages are flashing in the right spot, add a new :info_pre flash type that renders with preformatted output (don't like the name, but eh)

--- a/site/app/views/applications/get_started.html.haml
+++ b/site/app/views/applications/get_started.html.haml
@@ -3,11 +3,14 @@
 - if @wizard
   = app_wizard_steps_create 2, :completed => true
   %h1.invisible Get Started
+  = flashes
   %p Your application has been created. If you're new to OpenShift check out these tips for where to go next.
 
 - else
   %h1 Get Started
+  = flashes
   %p Looking for tips on what to build or where to go next?  We've organized some helpful hints for you.
+
 
 .row
   .span7
