--- a/site/app/views/terms/new.html.haml
+++ b/site/app/views/terms/new.html.haml
@@ -23,7 +23,7 @@
   %p
     Clicking <strong>I accept</strong> means that you agree to the above terms.
   
-  = render 'layouts/flashes'
+  = flashes
 
   = semantic_form_for @term, :simple => true do |form|
     = form.buttons do
