Cancel button on delete always returns user to application details page (more consistent), fix logging bug, and terms page should use simpler title style.

--- a/site/app/views/terms/new.html.haml
+++ b/site/app/views/terms/new.html.haml
@@ -2,10 +2,8 @@
 
 - content_for :page_title, 'Legal terms'
 
-%h1.ribbon
-  .ribbon-content Legal terms
-  .ribbon-left
-  
+%h1.ribbon Legal terms
+
 %section.content
   - @term.errors.each do |key, value|
     - if key == :base
