--- a/site/app/views/applications/delete.html.haml
+++ b/site/app/views/applications/delete.html.haml
@@ -3,7 +3,7 @@
 %h1 Delete Application
 
 - semantic_form_for @application, :simple => true, :html => {:method => :delete, :class => 'form-inline'} do |f|
-  %p Are you sure you want to delete the application '#{@application.name}'?
+  %p Are you sure you want to delete the application '#{content_tag(:strong, @application.name)}'?
   %p This will delete all the code and data associated with the app, and cannot be undone. Make sure this is something you really want to do!
   = f.semantic_errors
   -#= f.inputs do
