--- a/site/app/views/applications/get_started.html.haml
+++ b/site/app/views/applications/get_started.html.haml
@@ -12,7 +12,7 @@
   %p Looking for tips on what to build or where to go next?  We've organized some helpful hints for you.
 
 
-.row
+%section.row
   .span7
     -# application url
     %h2 Accessing your application
