--- a/site/app/views/opensource/download.html.haml
+++ b/site/app/views/opensource/download.html.haml
@@ -44,7 +44,7 @@
     - else
       = take_action download_index_path, "Start Download"
     %p
-      Once you've got it, you can #{link_to "run it as a virtual guest", livecd_wiki_url('boot_vm')},
+      After you download the image, you can #{link_to "run it as a virtual guest", livecd_wiki_url('boot_vm')},
       #{link_to "boot it from a LiveCD", livecd_wiki_url('boot_livecd')}, or
       #{link_to "boot it from a USB stick", livecd_wiki_url('boot_usb')}.
     %p
