--- a/site/app/views/product/getting_started.html.haml
+++ b/site/app/views/product/getting_started.html.haml
@@ -44,17 +44,17 @@
           %h3 Red Hat Enterprise Linux or Fedora
           %h5 Prerequisites
           %ul
-            %li RHEL 6 and up or Fedora 14 and up.
+            %li Red Hat Enterprise Linux 6 or later or Fedora 14 or later.
             %li Root or sudoer access
           %hr
           %ol
             %li
               %p.larger Download the express repo file #{link_to 'openshift.repo', "https://openshift.redhat.com/app/repo/openshift.repo"}
             %li
-              %p.larger Move the openshift.repo file to your /etc/yum.repos.d/ directory.
+              %p.larger Move the openshift.repo file to your <code>/etc/yum.repos.d/</code> directory.
               %pre
                 $ sudo mv ~/Downloads/openshift.repo /etc/yum.repos.d/
-              %p Replace '~/Downloads/openshift.repo' with the location to which you saved the repo file.
+              %p Replace <code>~/Downloads/openshift.repo</code> with the location to which you saved the repo file.
             %li
               %p.larger (RHEL 6.2 only) If you are using RHN Classic, you may need to add the RHEL 6.2 Optional Channel in order to install the 'rubygems' package.
               %pre
@@ -84,25 +84,6 @@
               %p.larger Install the gem:
               %pre $ su -c 'gem install rhc' 
     .span6
-      %section#mac.install
-        .well.prereqs
-          %h3 Mac
-          %h5 Prerequisites
-          %ul
-            %li Root access
-            %li
-              = link_to 'Full Xcode Suite', 'http://developer.apple.com/xcode'
-              &ndash; or &ndash;
-              = link_to 'git for OS X', 'http://code.google.com/p/git-osx-installer/'
-          %hr
-          %ol
-            %li
-              %p.larger Install the gem:
-              %pre
-                :preserve
-                  $ sudo gem install json_pure
-                  $ sudo gem install rhc
-
       %section#win.install
         .well.prereqs
           %h3 Windows
@@ -129,6 +110,25 @@
               %p.larger Install the gem:
               %pre $ gem install rhc
 
+      %section#mac.install
+        .well.prereqs
+          %h3 Mac
+          %h5 Prerequisites
+          %ul
+            %li Root access
+            %li
+              = link_to 'Full Xcode Suite', 'http://developer.apple.com/xcode'
+              &ndash; or &ndash;
+              = link_to 'git for OS X', 'http://code.google.com/p/git-osx-installer/'
+          %hr
+          %ol
+            %li
+              %p.larger Install the gem:
+              %pre
+                :preserve
+                  $ sudo gem install json_pure
+                  $ sudo gem install rhc
+
     .span12
       = link_to 'Read the Getting Started guide for more installation help', getting_started_guide_url, :class => 'action-more'
       %br
@@ -137,7 +137,7 @@
 %section#create_domain_name
   %h3 2. Create a domain name
   %p
-    Using your OpenShift login and password, call rhc domain create to create a unique domain name for your applications.
+    Using your OpenShift login and password, run <code>rhc domain create</code> to create a unique namespace for your applications.
 
     %pre
       :preserve
@@ -174,7 +174,7 @@
   %h3 4. Make a change, publish
 
   %p
-    As we all know, getting an application running is only the first step. Now you are on the road to making it your own.  Here's an example for
+    Getting an application running is only the first step. Now you are on the road to making it your own.  Here's an example for
     the php framework.
 
   %pre
