Make status ribbon be a bit cleaner in console

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -523,7 +523,13 @@ figure {
   .status-important {
   	background-color: #900;
   }
-  
+#utility-nav .alert {
+  color: #333;
+
+  &:hover {
+    color: black;
+  }
+}
 
 .nav {
 	margin-bottom: 6px;
