--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -170,7 +170,10 @@
   border: 4px solid #000;
 }
 .new-post-button {
-	text-align:right;
+	text-align:right;	
+  	p {
+  		text-align:left;
+  	}
 }
 .view-user-profile-box {
   .picture img {
