Make username drop menu position absolute at mobile sizes to enable topmost position on open, Fix search field to use modified mixin inputGridSystem-inputColumns and set have it's width set appropriate to grid. And a few other minor visual mods...

--- a/site/app/stylesheets/console/_dropdowns.scss
+++ b/site/app/stylesheets/console/_dropdowns.scss
@@ -69,6 +69,10 @@
     bottom: 100%;
     margin-bottom: 2px;
   }
+  
+  li {
+  	list-style:none;
+  }
 
   // Dividers (basically an hr) within the dropdown
   .divider {
