More fixes for input field width sizing

--- a/site/app/stylesheets/bootstrap/_mixins.scss
+++ b/site/app/stylesheets/bootstrap/_mixins.scss
@@ -240,6 +240,7 @@
 
 // Input grid system
 // -------------------------
+/*
 @mixin inputGridSystem-inputColumns($gridGutterWidth, $gridColumnWidth, $gridRowWidth, $columns) {
   width: (($gridColumnWidth) * $columns) + ($gridGutterWidth * ($columns - 1)) - 10;
 }
@@ -261,6 +262,7 @@
     &.span12    { @include inputGridSystem-inputColumns($gridGutterWidth, $gridColumnWidth, $gridRowWidth, 12); }
   }
 }
+*/
 
 // Make a Grid
 // -------------------------
