--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -14,7 +14,7 @@ Color palette
 205  32  44    cd202c     Primary Red
 161   0  12    a1000c     Dark Red
  
-
+*/
 
 // Defaults before partials
 // -----------------------------------------------------
